--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,8 @@ mod_group = net.lopymine.mossy
 lombok_version = 1.18.32
 
 # Multi-Versions
-multi_versions = 1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6
+# Verified version: 1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6
+multi_versions = 1.20.6 1.20.1
 
 # Build Dependencies
 build.yarn = [VERSIONED]
