--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,10 @@ mod_name = Mossy
 mod_version = 1.0.0
 mod_group = net.lopymine.mossy
 
+mod_description = Template Fabric mod with some additional tweaks and templates for my projects
+mod_authors = LopyMine
+mod_license = GPL-2.0
+
 # Main Dependencies
 lombok_version = 1.18.32
 
