Gradle configuration update - Deleted `dep.java_version` from gradle.properties, now java version gets in build.gradle using version comparing from Stonecutter - Fixed possible error and bugs with player.properties - Updated Stonecutter version - Updated default values in player.properties

--- a/player/player.properties
+++ b/player/player.properties
@@ -1,5 +1,5 @@
 # Player properties
 # If you don't want to change any properties, just remove it
-player_nickname=Cool boy
-player_uuid=Your UUID here
+player_nickname=Steve
+player_uuid=8667ba71-b85a-4004-af54-457a9734eed7
 # After changes, you need to delete "/.idea/runConfigurations" folder and reopen project and reload gradle
