--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ def modLicense = project.mod_license
 def minecraftVersion = stonecutter.current.version.toString() // Current MC version from "./versions/" folder
 def lombokVersion = project.lombok_version
 def fabricLoader = findProperty("build.fabric_loader")
-def javaVersion = findProperty("build.java")
+
+def javaVersion = stonecutter.compare("1.20.5", minecraftVersion) == 1 ? 17 : 21
 def fabricAPI = findProperty("build.fabric_api")
 
 version = "${modVersion}+${stonecutter.current.version}"
@@ -81,9 +82,13 @@ loom {
         accessWidenerPath = accessWidenerFile
     }
 
-    def playerProperties = getPlayerProperties()
-    def playerNickname = playerProperties.contains("player_nickname") ? playerProperties.get("player_nickname") : null // Your in-game nickname
-    def playerUuid = playerProperties.contains("player_uuid") ? playerProperties.get("player_uuid") : null // Your in-game uuid
+	def playerProperties = getPlayerProperties()
+
+	def playerNicknameProperty = playerProperties.get("player_nickname").toString() // Your in-game nickname
+	def playerNickname = getNickname(playerNicknameProperty)
+
+	def playerUuidProperty = playerProperties.get("player_uuid").toString() // Your in-game uuid
+	def playerUuid = getUUID(playerUuidProperty, playerUuidProperty.indexOf("-") == -1)
 
     runConfigs.configureEach { config ->
         config.setIdeConfigGenerated(true) // generate IDE tasks for running client, server and testmod, datagen if those are present
@@ -160,6 +165,27 @@ jar {
     from("LICENSE") {
         rename { "${it}_${project.base.archivesName.get()}" }
     }
+}
+
+String getNickname(String nickname) {
+	if (!nickname.matches('^[a-zA-Z0-9_]{2,16}$')) {
+		println "WARNING — Your nickname is wrong, using default nickname 'Player'"
+		return "Player"
+	}
+	return nickname
+}
+
+UUID getUUID(String uuid, boolean undashed) {
+	try {
+		if (undashed) {
+			return UUID.fromString(uuid.replaceFirst("(\\w{8})(\\w{4})(\\w{4})(\\w{4})(\\w{12})", '$1-$2-$3-$4-$5'))
+		}
+		return UUID.fromString(uuid)
+	} catch (Exception e) {
+		e.printStackTrace()
+	}
+	println "WARNING — Your UUID is wrong, failed to parse it"
+	return null
 }
 
 Properties getPlayerProperties() {
