--- a/settings.gradle
+++ b/settings.gradle
@@ -80,29 +80,29 @@ def createAW(String version) {
 }
 
 def createMixin(String version) {
-    def mixinsFolder = file("src/main/resources/mixins/")
-    if (!mixinsFolder.exists() && !mixinsFolder.mkdirs()) {
-        return
-    }
-    def mixinsFile = file("src/main/resources/mixins/${version}-${mod_id}.mixins.json5")
-    if (mixinsFile.exists() || !mixinsFile.createNewFile()) {
-        return
-    }
+	def mixinsFolder = file("src/main/resources/mixins/")
+	if (!mixinsFolder.exists() && !mixinsFolder.mkdirs()) {
+		return
+	}
+	def mixinsFile = file("src/main/resources/mixins/${version}-${mod_id}.mixins.json5")
+	if (mixinsFile.exists() || !mixinsFile.createNewFile()) {
+		return
+	}
 
-    def mixinContent = [
-            required: true,
-            package: "${mod_group}.mixin",
-            refmap: "${mod_id}.refmap.json",
-            compatibilityLevel: "JAVA_17",
-            mixins: [],
-            client: [],
-            injectors: [
-                defaultRequire: 1
-            ]
-    ]
+	def mixinContent = [
+			required: true,
+			package: '${mod_group}.mixin',
+			refmap: '${mod_id}.refmap.json',
+			compatibilityLevel: 'JAVA_${java}',
+			mixins: [],
+			client: [],
+			injectors: [
+					defaultRequire: 1
+			]
+	]
 
-    mixinsFile.text = new JsonBuilder(mixinContent).toPrettyString()
-    println "Successfully created Mixin for ${version}"
+	mixinsFile.text = new JsonBuilder(mixinContent).toPrettyString()
+	println "Successfully created Mixin for ${version}"
 }
 
 def createGradleProperties(String version, ArrayList<String> additionalDepends) {
