--- a/src/main/resources/mixins/1.20.1-mossy.mixins.json5
+++ b/src/main/resources/mixins/1.20.1-mossy.mixins.json5
@@ -1,13 +1,13 @@
 {
     "required": true,
-    "package": "net.lopymine.mossy.mixin",
-    "refmap": "mossy.refmap.json",
-    "compatibilityLevel": "JAVA_17",
+    "package": "${mod_group}.mixin",
+    "refmap": "${mod_id}.refmap.json",
+    "compatibilityLevel": "JAVA_${java}",
     "mixins": [
         
     ],
     "client": [
-        "ExampleMixin"
+	    "ExampleMixin"
     ],
     "injectors": {
         "defaultRequire": 1
