--- a/stonecutter.gradle
+++ b/stonecutter.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 stonecutter.active "1.20.6" /* [SC] DO NOT EDIT */
 
-stonecutter.registerChiseled tasks.register("chiseledBuild", stonecutter.chiseled) {
-    setGroup "project"
-    ofTask "build"
+stonecutter.registerChiseled tasks.register("chiseledBuildAndCollect", stonecutter.chiseled) {
+	setGroup "project"
+	ofTask "buildAndCollect"
 }
