--- a/versions/1.20.6/gradle.properties
+++ b/versions/1.20.6/gradle.properties
@@ -10,6 +10,6 @@ build.fabric_api=0.100.0+1.20.6
 
 # Additional Dependencies Properties
 # modmenu, check https://modrinth.com/mod/modmenu/versions?g=1.20.6
-dep.modmenu=10.0.0-beta.1
+dep.modmenu=10.0.0
 # yacl, check https://modrinth.com/mod/yacl/versions?g=1.20.6
 dep.yacl=3.5.0+1.20.6-fabric
