--- a/publish/publish.properties
+++ b/publish/publish.properties
@@ -2,8 +2,8 @@
 
 # Mod Loaders
 loaders = fabric
-# Publication Versions from `ROOT/build/libs/mod-version-here.jar` or from `ROOT/versions/build/libs/...` if not present in root
-publication_versions = 1.20.1 1.20.5[6] 1.21
+# Publication Versions from `ROOT/build/libs/mod-version-here.jar` or from `ROOT/versions/MULTI_VERSION/build/libs/...` if not present in root
+publication_versions = 1.20.1 1.20.5 1.21
 # Version Type [RELEASE, BETA, ALPHA]
 version_type = RELEASE
 
@@ -11,8 +11,8 @@ version_type = RELEASE
 imitation = false
 
 # Project IDs
-modrinth_id = ygYU16dG
-curseforge_id = 1065783
+modrinth_id = KyxONZZh
+curseforge_id = TODO
 
 # CurseForge Settings
 is_for_client = true
@@ -20,7 +20,7 @@ is_for_server = false
 max_java_version = 21
 
 # Mod Depends
-requires = fabric-api
+requires = none
 optional = modmenu yacl
 incompatible = none
 embeds = none
