--- a/gradle.properties
+++ b/gradle.properties
@@ -15,9 +15,9 @@ mod_license = GPL-2.0
 # Main Dependencies
 lombok_version = 1.18.32
 
-# Multi-Versions
-# Verified version: 1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6
-multi_versions = 1.20.6 1.20.1
+# Multi-Versions Properties
+# Verified version: 1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6 1.21
+multi_versions = 1.20.1[2] 1.20.6
 
 # Build Dependencies
 build.yarn = [VERSIONED]
