--- a/publish/publish.properties
+++ b/publish/publish.properties
@@ -8,7 +8,7 @@ publication_versions = 1.20.1 1.20.5 1.21
 version_type = RELEASE
 
 # Imitation of Publishing. Set to "true" for testing
-imitation = false
+test_publish = true
 
 # Project IDs
 modrinth_id = KyxONZZh
@@ -18,6 +18,13 @@ curseforge_id = TODO
 is_for_client = true
 is_for_server = false
 max_java_version = 21
+
+# Discord Settings
+# Hex Color
+project_color = 6323B5
+uploaderId = 616939110598443008
+announcementChannelId = 1090758804913803304
+testAnnouncementChannelId = 1266007822173470730
 
 # Mod Depends
 requires = none
