--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ mod_id = mossy
 mod_name = Mossy
 mod_version = 1.0.0
 mod_group = net.lopymine.mossy
+mod_maven_group = net.lopymine
 
 mod_description = Template Fabric mod with some additional tweaks and templates for my projects
 mod_authors = LopyMine
