--- a/stonecutter.gradle
+++ b/stonecutter.gradle
@@ -12,3 +12,8 @@ stonecutter.registerChiseled tasks.register("chiseledPublish", stonecutter.chise
 	setGroup("project")
 	ofTask("publishMods")
 }
+
+stonecutter.registerChiseled tasks.register("chisheledAnnounceToDiscord", stonecutter.chiseled) {
+	setGroup("project")
+	ofTask("announceToDiscord")
+}
