Minecraft cape, I'm coming for you

--- a/publish/publish.properties
+++ b/publish/publish.properties
@@ -21,10 +21,12 @@ max_java_version = 21
 
 # Discord Settings
 # Hex Color
+# https://www.mathsisfun.com/hexadecimal-decimal-colors.html
 project_color = 6323B5
 uploaderId = 616939110598443008
 announcementChannelId = 1090758804913803304
 testAnnouncementChannelId = 1266007822173470730
+showcase_images = banner.png banner.png
 
 # Mod Depends
 requires = none
