--- a/build.gradle
+++ b/build.gradle
@@ -15,16 +15,16 @@ def modDescription = project.mod_description
 def modAuthors = project.mod_authors
 def modLicense = project.mod_license
 
-def minecraftVersion = stonecutter.current.version.toString() // Current MC version from "./versions/" folder
+def mcVersion = stonecutter.current.version.toString() // Current MC version from "./versions/" folder
 def versionsWithSupportRange = getVersionsWithSupportRange()
-def supportedMinecraftVersionRange = getSupportedMinecraftVersionRange(versionsWithSupportRange, minecraftVersion)
-println "[${minecraftVersion}] Supported Minecraft Versions: ${supportedMinecraftVersionRange}"
+def supportedMinecraftVersionRange = getSupportedMinecraftVersionRange(versionsWithSupportRange, mcVersion)
+println "[${mcVersion}] Supported Minecraft Versions: ${supportedMinecraftVersionRange}"
 def lombokVersion = project.lombok_version
 def fabricLoader = findProperty("build.fabric_loader")
 
-def javaVersionAsInt = getJavaVersionAsInteger(minecraftVersion)
+def javaVersionAsInt = getJavaVersionAsInteger(mcVersion)
 def javaVersion = JavaVersion.toVersion(javaVersionAsInt)
-println "[${minecraftVersion}] Using Java: ${javaVersion.toString()}"
+println "[${mcVersion}] Using Java: ${javaVersion.toString()}"
 def fabricAPI = findProperty("build.fabric_api")
 
 version = "${modVersion}+${supportedMinecraftVersionRange}"
@@ -57,7 +57,7 @@ repositories {
 }
 
 dependencies {
-	minecraft "com.mojang:minecraft:${minecraftVersion}"
+	minecraft "com.mojang:minecraft:${mcVersion}"
 	mappings "net.fabricmc:yarn:${findProperty("build.yarn")}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${fabricLoader}"
 
@@ -73,7 +73,7 @@ dependencies {
 
 	// YACL
 	def minecraftVersionsWithOldYACLMaven = Set.of("1.19.4", "1.20", "1.20.2", "1.20.3")
-	if (minecraftVersionsWithOldYACLMaven.contains(minecraftVersion)) {
+	if (minecraftVersionsWithOldYACLMaven.contains(mcVersion)) {
 		def property = findProperty("dep.yacl").toString()
 		def i = property.lastIndexOf("-")
 		if (i != -1) {
@@ -90,7 +90,7 @@ loom {
 		defaultRefmapName.set("${modId}.refmap.json")
 	}
 
-	def accessWidenerFile = project.rootProject.file("src/main/resources/aws/${minecraftVersion}.accesswidener")
+	def accessWidenerFile = project.rootProject.file("src/main/resources/aws/${mcVersion}.accesswidener")
 	if (accessWidenerFile.exists()) {
 		accessWidenerPath = accessWidenerFile
 	}
@@ -128,10 +128,10 @@ processResources {
 	props.put("mod_license", modLicense.toString())
 	props.put("version", version.toString())
 	props.put("fabric_loader", fabricLoader.toString())
-	props.put("minecraft", minecraftVersion.toString())
+	props.put("minecraft", mcVersion.toString())
 	props.put("java", javaVersionAsInt.toString())
 	props.put("fabric_api", fabricAPI.toString())
-	props.put("fabric_api_id", stonecutter.compare("1.19.1", minecraftVersion) >= 0 ? "fabric" : "fabric-api")
+	props.put("fabric_api_id", stonecutter.compare("1.19.1", mcVersion) >= 0 ? "fabric" : "fabric-api")
 
 	props.each { key, value ->
 		inputs.property key, value
@@ -142,7 +142,7 @@ processResources {
 	}
 
 	filesMatching("aws/*.accesswidener") {
-		if (!it.getName().startsWith(minecraftVersion)) {
+		if (!it.getName().startsWith(mcVersion)) {
 			it.exclude()
 		}
 	}
@@ -150,7 +150,7 @@ processResources {
 	filesMatching("mixins/*.mixins.json5") {
 		def fileName = it.getName().toString()
 		def index = fileName.indexOf('-')
-		if (index != -1 && fileName.substring(0, index) == minecraftVersion) {
+		if (index != -1 && fileName.substring(0, index) == mcVersion) {
 			expand(props)
 		} else {
 			it.exclude()
@@ -353,7 +353,7 @@ publishMods {
 
 	VersionWithSupportRange pubVersion = null
 	def publish = pubVersions.any {
-		def bl = it.projectVersion == minecraftVersion
+		def bl = it.projectVersion == mcVersion
 		if (bl) {
 			pubVersion = it
 		}
@@ -364,7 +364,7 @@ publishMods {
 		def versionName = "[${supportedMinecraftVersionRange}] ${modName} ${modVersion}"
 		displayName = versionName
 		println "[PublishMods] [INFO] Configuring '${versionName}' for publishing"
-		file = getBuildedModFileOrDefault(modName, modVersion, minecraftVersion)
+		file = getBuildedModFileOrDefault(modName, modVersion, mcVersion)
 		changelog = getChangeLog()
 		type = versionType
 		modLoaders.addAll(loaders)
@@ -394,7 +394,7 @@ publishMods {
 					end = pubVersion.maxVersion
 				}
 			} else {
-				minecraftVersions.add(minecraftVersion)
+				minecraftVersions.add(mcVersion)
 			}
 
 			if (requiresDepends.first() != "none") {
@@ -422,7 +422,7 @@ publishMods {
 					end = pubVersion.maxVersion
 				}
 			} else {
-				minecraftVersions.add(minecraftVersion)
+				minecraftVersions.add(mcVersion)
 			}
 
 			if (requiresDepends.first() != "none") {
@@ -460,8 +460,8 @@ announceToDiscord {
 		return
 	}
 
-	announceMode = minecraftVersion == versionsWithSupportRange.last().projectVersion ?
-			providers.environmentVariable("DISCORD_BOT_TOKEN").orNull == null || Boolean.parseBoolean(pubProperties.get("test_publish").toString()) ?
+	announceMode = mcVersion == versionsWithSupportRange.last().projectVersion ?
+			providers.environmentVariable("DISCORD_BOT_TOKEN") == null || Boolean.parseBoolean(pubProperties.get("test_publish").toString()) ?
 					TEST
 					:
 					ENABLE
@@ -472,22 +472,63 @@ announceToDiscord {
 	icon = project.rootProject.file("src/main/resources/icon/icon.png")
 
 	title = "${modName} v${modVersion} is out!"
-	showcaseThreadTitle  = "${modName} v${modVersion} Showcase"
- 	changelog = getChangeLog()
-	color = pubProperties.get("project_color") == null ? null : getDecimalColorFromHEX(pubProperties.get("project_color").toString())
+	showcaseThreadTitle = "${modName} v${modVersion} Showcase"
+	changelog = getChangeLog()
+	color = getDecimalColorFromHEX(pubProperties.get("project_color").toString())
 
-	modrinthLink = "https://modrinth.com/project/${modId}"
+	// Links
+	modrinthLink = "https://modrinth.com/mod/${modId}"
 	curseForgeLink = "https://www.curseforge.com/minecraft/mc-mods/${modId}"
 	githubLink = "https://github.com/LopyMine/${modId}"
 
-	uploaderId = pubProperties.get("uploaderId") == null ? null : pubProperties.get("uploaderId").toString()
+	uploaderId = pubProperties.get("uploaderId").toString()
 	announcementChannelId = pubProperties.get("announcementChannelId").toString()
 	testAnnouncementChannelId = pubProperties.get("testAnnouncementChannelId").toString()
-	pingRoles = [modName]
+	pingRoles = [modId]
 
-	showcaseImages = [project.rootProject.file("img/banner.png"), project.rootProject.file("img/launching_minecraft.gif"), project.rootProject.file("img/switching_version.gif")]
+	showcaseImages = getShowcaseFiles(pubProperties)
+}
+
+File[] getShowcaseFiles(Properties pubProperties) {
+	def files = []
+	def images = pubProperties.get("showcase_images").toString().split(" ")
+	images.each { img ->
+		files.add(project.rootProject.file("img/showcase/${img}"))
+	}
+	return files
 }
 
 static int getDecimalColorFromHEX(String hexColor) {
 	return Integer.parseInt(hexColor, 16)
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
