Now I'm here and I want to update some useless stuff

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
+# # # # # # # # # # # # # #
+#    Gradle Properties    #
+# # # # # # # # # # # # # #
+
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx5G
 org.gradle.parallel=true
@@ -18,7 +22,7 @@ lombok_version = 1.18.32
 
 # Multi-Versions Properties
 # Verified version: 1.20 1.20.1 1.20.2 1.20.3 1.20.4 1.20.5 1.20.6 1.21
-multi_versions = 1.20.1[2] 1.20.6 1.21
+multi_versions = 1.20.1 1.20.6 1.21
 
 # Build Dependencies
 build.yarn = [VERSIONED]
@@ -29,3 +33,32 @@ build.java = [VERSIONED]
 # Additional Dependencies, "dep." is important
 dep.yacl = [VERSIONED]
 dep.modmenu = [VERSIONED]
+
+# # # # # # # # # # # # # #
+#  Publication Properties #
+# # # # # # # # # # # # # #
+
+# Mod Loaders
+loaders = fabric
+# Publication Versions from `ROOT/build/libs/mod-version-here.jar` or from `ROOT/versions/MULTI_VERSION/build/libs/...` if not present in root
+publication_versions = 1.20.1[1.20.2] 1.21
+# Version Type [RELEASE, BETA, ALPHA]
+version_type = RELEASE
+
+# Imitation of Publishing. Set to "true" for testing
+test_publish = true
+
+# Project IDs
+modrinth_id = KyxONZZh
+curseforge_id = TODO
+
+# CurseForge Settings
+is_for_client = true
+is_for_server = false
+max_java_version = 21
+
+# Mod Depends
+requires_depends = none
+optional_depends = modmenu yacl
+incompatible_depends = none
+embeds_depends = none
