--- a/stonecutter.gradle
+++ b/stonecutter.gradle
@@ -1,19 +1,46 @@
 plugins {
-    id "dev.kikugie.stonecutter"
+	id "dev.kikugie.stonecutter"
 }
 stonecutter.active "1.20.6" /* [SC] DO NOT EDIT */
 
 stonecutter.registerChiseled tasks.register("chiseledBuildAndCollect", stonecutter.chiseled) {
-	setGroup "project"
-	ofTask "buildAndCollect"
+	setGroup("project")
+	ofTask("buildAndCollect")
 }
 
-stonecutter.registerChiseled tasks.register("chiseledPublish", stonecutter.chiseled) {
+stonecutter.registerChiseled tasks.register("chiseledPublishAll", stonecutter.chiseled) {
 	setGroup("project")
 	ofTask("publishMods")
 }
 
-stonecutter.registerChiseled tasks.register("chisheledAnnounceToDiscord", stonecutter.chiseled) {
+
+stonecutter.registerChiseled tasks.register("chiseledPublishSpecified", stonecutter.chiseled) {
+	def list = getPublicationVersions()
+	versions = stonecutter.versions.findAll { list.contains(it.project) }
 	setGroup("project")
-	ofTask("announceToDiscord")
+	ofTask("publishMods")
+}
+
+for (ver in stonecutter.versions) {
+	stonecutter.registerChiseled tasks.register("chiseledBuildAndCollect+${ver.project}", stonecutter.chiseled) {
+		versions = [ver]
+		setGroup("project")
+		ofTask("buildAndCollect")
+	}
+
+	stonecutter.registerChiseled tasks.register("chiseledPublish+${ver.project}", stonecutter.chiseled) {
+		versions = [ver]
+		setGroup("project")
+		ofTask("publishMods")
+	}
+}
+
+String[] getPublicationVersions() {
+	return publication_versions.toString().split(" ").collect { s ->
+		def index = s.indexOf("[")
+		if (index == -1) {
+			return s
+		}
+		return s.substring(0, index)
+	}
 }
