--- a/personal/personal.properties
+++ b/personal/personal.properties
@@ -10,7 +10,7 @@ player_nickname=Steve
 player_uuid=8667ba71-b85a-4004-af54-457a9734eed7
 
 # Hot Swapping
-absolute_path_to_sponge_mixin=C:\Users\temac\.gradle\caches\modules-2\files-2.1\net.fabricmc\sponge-mixin\0.13.3+mixin.0.8.5\9527e6b0d2449408958fd1302594dc65ec5ade9c\sponge-mixin-0.13.3+mixin.0.8.5.jar
+absolute_path_to_sponge_mixin=none
 
 # Quick Play
 world_name=none
