--- a/src/main/resources/mossy.mixins.json5
+++ b/src/main/resources/mossy.mixins.json5
@@ -7,8 +7,8 @@
         
     ],
     "client": [
-        /*? =1.20.1 */
-	    "ExampleMixin"
+        /*? =1.20.1*/
+	    /*"ExampleMixin"*/
     ],
     "injectors": {
         "defaultRequire": 1
