--- a/build.gradle
+++ b/build.gradle
@@ -135,7 +135,8 @@ processResources {
 		inputs.property key, value
 	}
 
-	filesMatching(["fabric.mod.json"]) {
+
+	filesMatching(["fabric.mod.json", "${modId}.mixins.json5".toString(), "assets/${modId}/lang/*.json".toString()]) {
 		expand(props)
 	}
 
@@ -143,14 +144,6 @@ processResources {
 		if (!it.getName().startsWith(mcVersion)) {
 			it.exclude()
 		}
-	}
-
-	filesMatching("${modId}.mixins.json5") {
-		expand(props)
-	}
-
-	filesMatching("assets/${modId}/lang/*.json") {
-		expand(props)
 	}
 }
 
@@ -162,6 +155,37 @@ stonecutter {
 
 tasks.withType(JavaCompile).configureEach {
 	it.options.release = (javaVersionAsInt as int)
+}
+
+tasks.register('createPersonalProperties') {
+	group = 'project'
+
+	doFirst {
+		def folder = project.rootProject.file("personal/")
+		if (folder.exists() || folder.mkdirs()) {
+			def props = project.rootProject.file("personal/personal.properties")
+			props.createNewFile()
+			props.text =
+					"""
+					# # # # # # # # # # # # # #
+					#   Personal Properties   #
+					# # # # # # # # # # # # # #
+					
+					# If you don't want to set up any property, just set it to "none".
+					# Remember to run "regenerateRunConfigurations" task after changing this file!
+					
+					# Player properties
+					player_nickname=Steve
+					player_uuid=8667ba71-b85a-4004-af54-457a9734eed7
+					
+					# Hot Swapping
+					absolute_path_to_sponge_mixin=none
+					
+					# Quick Play
+					world_name=none
+					""".stripIndent().strip()
+		}
+	}
 }
 
 tasks.register('regenerateRunConfigurations', Delete) {
@@ -180,8 +204,8 @@ tasks.register('buildAndCollect', Copy) {
 tasks.register('rebuildLibs', Delete) {
 	group = 'build'
 	delete(project.rootProject.file("libs/${modName}-${version}.jar"))
-	delete(project.layout.buildDirectory.file("libs/${modName}-${version}.jar"))
-	delete(project.layout.buildDirectory.file("libs/${modName}-${version}-sources.jar"))
+	delete(project.file("libs/${modName}-${version}.jar"))
+	delete(project.file("libs/${modName}-${version}-sources.jar"))
 	finalizedBy("build")
 }
 
