--- a/gradle.properties
+++ b/gradle.properties
@@ -26,8 +26,8 @@ multi_versions = 1.20.1 1.21
 
 # Build Dependencies
 build.yarn = [VERSIONED]
-build.fabric_loader = [VERSIONED]
-build.fabric_api = [VERSIONED]
+build.fabric_loader = 0.15.11
+build.fabric_api = *
 build.java = [VERSIONED]
 
 # Additional Dependencies, "dep." is important
