--- a/gradle.properties
+++ b/gradle.properties
@@ -27,7 +27,7 @@ multi_versions = 1.20.1 1.21
 # Build Dependencies
 build.yarn = [VERSIONED]
 build.fabric_loader = 0.15.11
-build.fabric_api = *
+build.fabric_api = [VERSIONED]
 build.java = [VERSIONED]
 
 # Additional Dependencies, "dep." is important
