--- a/versions/1.20.1/gradle.properties
+++ b/versions/1.20.1/gradle.properties
@@ -5,6 +5,7 @@ build.java=17
 
 # Fabric Properties, check https://fabricmc.net/develop/
 build.yarn=1.20.1+build.10
+build.fabric_api=0.92.2+1.20.1
 
 # Additional Dependencies Properties
 # modmenu, check https://modrinth.com/mod/modmenu/versions?g=1.20.1
