--- a/versions/1.21/gradle.properties
+++ b/versions/1.21/gradle.properties
@@ -2,6 +2,7 @@
 
 # Fabric Properties, check https://fabricmc.net/develop/
 build.yarn=1.21+build.9
+build.fabric_api=0.100.7+1.21
 
 # Additional Dependencies Properties
 # modmenu, check https://modrinth.com/mod/modmenu/versions?g=1.21
