--- a/src/main/resources/mossy.mixins.json5
+++ b/src/main/resources/mossy.mixins.json5
@@ -1,13 +1,13 @@
 {
     "required": true,
-    "package": "${mod_group}.mixin",
+    "package": "net.lopymine.mossy.mixin",
     "refmap": "${mod_id}.refmap.json",
     "compatibilityLevel": "JAVA_${java}",
     "mixins": [
         
     ],
     "client": [
-        /*? =1.20.1*/
+        //? =1.20.1
 	    /*"ExampleMixin"*/
     ],
     "injectors": {
