Good, it's fixed, now we need to set test_publish to false and calmly use it

--- a/gradle.properties
+++ b/gradle.properties
@@ -46,7 +46,7 @@ publication_versions = 1.20.1[1.20.2] 1.21
 version_type = RELEASE
 
 # Imitation of Publishing. Set to "true" for testing
-test_publish = true
+test_publish = false
 
 # Project IDs
 modrinth_id = KyxONZZh
