--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,4 +17,5 @@ jobs:
       - name: Publish mods
         run: ./gradlew build publishMods
         env:
-          MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
+          CURSEFORGE_API_KEY: ${{ secrets.CURSEFORGE_API_KEY }}
+          MODRINTH_API_KEY: ${{ secrets.MODRINTH_API_KEY }}
